k8s/authelia/authelia.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: auth
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:4.38
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: storage
              mountPath: /var/lib/authelia
      volumes:
        - name: config
          configMap:
            name: authelia-config
        - name: storage
          persistentVolumeClaim:
            claimName: authelia-storage
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: auth
spec:
  ports:
    - port: 80
      targetPort: 9091
  selector:
    app: authelia
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia-route
  namespace: auth
spec:
  parentRefs:
    - name: gateway
      namespace: traefik
  hostnames:
    - "auth.khalilaliouich.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
